web-infras/parser/tests/fixtures/babel/es2015/modules/import-invalid-keyword-flow/output.txt
[SyntaxError]: Unexpect keyword, module name can not just as specifier without `as` rename. (1,10)
1|import { default } from "foo";
 |        ^
